tests/regression/error/hw4_error08.correct
operator '<' requires number * number, found none * number
